# ab360-Agentic-AI

./: .gitignore  AB360_ARCHITECTURE_EXPLAINED.md  ARCHITECTURE.md  README.md
backend/: .gitignore  README.md  ab360_backend.spec  pyproject.toml  view_all.py  view_chromadb.py  view_sqlite.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  nodes.py  state.py
backend/app/core/: __init__.py  config.py  database.py  vector_store.py
backend/app/models/: __init__.py  schemas.py
backend/app/routes/: __init__.py  chat.py  memory.py  tasks.py
backend/app/services/: __init__.py  ai_service.py
backend/app/tools/: __init__.py  learning_tracker.py  memory.py  notes.py  planner.py  task_manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AssistantWidget.jsx  ChatWindow.jsx  FloatingBar.jsx
frontend/src/styles/: AssistantWidget.css  ChatWindow.css  FloatingBar.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
