[tool.poetry]
name = "ab360"
version = "0.1.0"
description = "Personal desktop AI assistant"
authors = ["siraj <sirajcsc2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
langchain = "^0.1.0"
langchain-community = "^0.0.20"
langgraph = "^0.0.20"
chromadb = "^0.4.22"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
ruff = "^0.1.9"
pyinstaller = "^6.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
